--- a/gateway-chart/values.yaml
+++ b/gateway-chart/values.yaml
@@ -1,8 +1,6 @@
-name: cilium-gateway
+name: my-gateway
 namespace: default
 className: cilium
 port: 80
 listenerName: web-gw
 allowedRoutesNamespaceFrom: Same
-addresses: []
-hostname: ""
