--- a/metallb/ip-pool.yaml
+++ b/metallb/ip-pool.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: demo-pool
+  name: default-pool
   namespace: metallb-system
 spec:
   addresses:
