--- a/metallb/l2-adv.yaml
+++ b/metallb/l2-adv.yaml
@@ -1,5 +1,8 @@
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: demo-advertisement
+  name: default-l2
   namespace: metallb-system
+spec:
+  ipAddressPools:
+    - default-pool
