gateway api staic address

--- a/cilium-gateway/cilium-gateway.yaml
+++ b/cilium-gateway/cilium-gateway.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: default
 spec:
   gatewayClassName: cilium
+  addresses:
+  - type: IPAddress
+    value: 192.168.45.200
   listeners:
   - name: http
     protocol: HTTP
