--- a/rabbitmq/rabbitmq-ui-route.yaml
+++ b/rabbitmq/rabbitmq-ui-route.yaml
@@ -12,7 +12,7 @@ spec:
     - matches:
         - path:
             type: PathPrefix
-            value: /rabbitmq
+            value: /rabbitmq/
       filters:
         - type: URLRewrite
           urlRewrite:
