refactor: - remove service, httproute - add secret, configmap

--- a/worker-chart/charts/ocr-worker/templates/deployment.yaml
+++ b/worker-chart/charts/ocr-worker/templates/deployment.yaml
@@ -23,3 +23,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
+      envFrom:
+        - configMapRef:
+            name: {{ .Values.service.name }}-config
+        - secretRef:
+            name: {{ .Values.service.name }}-secret
