--- a/minio/minio-pv.yaml
+++ b/minio/minio-pv.yaml
@@ -9,6 +9,6 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: hostpath
+  storageClassName: ""
   hostPath:
     path: "/home/wjh2012/minio/data"
