--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -329,7 +329,15 @@ tenant:
   #
   # - Specify ``minio: true`` to expose the MinIO S3 API.
   # - Specify ``console: true`` to expose the Console.
-  #
+  console:
+    image:
+      repository: quay.io/minio/console
+      tag: latest
+      pullPolicy: IfNotPresent
+    replicas: 1
+    consoleArgs:
+      - "--address=:9001"
+      - "--no-tls"
   # Both fields default to ``false``.
   exposeServices: { }
   ###
