minio-ui-route filter

--- a/minio/minio-ui-route.yaml
+++ b/minio/minio-ui-route.yaml
@@ -12,7 +12,13 @@ spec:
     - matches:
         - path:
             type: PathPrefix
-            value: /minio
+            value: /minio/
+      filters:
+        - type: URLRewrite
+          urlRewrite:
+            path:
+              type: ReplacePrefixMatch
+              replacePrefixMatch: /
       backendRefs:
         - name: myminio-console
           port: 9090
