minio console path filter

--- a/minio/minio-ui-route.yaml
+++ b/minio/minio-ui-route.yaml
@@ -12,7 +12,7 @@ spec:
     - matches:
         - path:
             type: PathPrefix
-            value: /minio
+            value: /minio/
       filters:
         - type: URLRewrite
           urlRewrite:
