--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -359,7 +359,9 @@ tenant:
   serviceMetadata: { }
   ###
   # Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-  env: [ ]
+  env:
+  - name: CONSOLE_BASE_URL
+    value: /minio/
   ###
   # PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
   # This is applied to MinIO pods only.
