--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -359,9 +359,7 @@ tenant:
   serviceMetadata: { }
   ###
   # Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-  env:
-  - name: CONSOLE_BASE_URL
-    value: /minio/
+  env: [ ]
   ###
   # PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
   # This is applied to MinIO pods only.
