--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -94,7 +94,10 @@ tenant:
     accessKey: minio
     secretKey: minio123
     #existingSecret: true
-
+    
+  configuration:
+    name: minio-env-secret
+    existingSecret: true
   ###
   # Metadata that will be added to the statefulset and pods of all pools
   poolsMetadata:
