--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -269,7 +269,7 @@ tenant:
     externalCertSecret: [ ]
     ###
     # Enable automatic Kubernetes based `certificate generation and signing <https://kubernetes.io/docs/tasks/tls/managing-tls-in-a-cluster>`__
-    requestAutoCert: false
+    requestAutoCert: true
     ###
     # The minimum number of days to expiry before an alert for an expiring certificate is fired.
     # In the below example, if a given certificate will expire in 7 days then expiration events will only be triggered 1 day before expiry
@@ -359,11 +359,7 @@ tenant:
   serviceMetadata: { }
   ###
   # Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-  env:
-    - name: CONSOLE_BASE_URL
-      value: /minio/
-    - name: MINIO_BROWSER_REDIRECT_URL
-      value: https://ggomg.duckdns.org:30000/minio/
+  env: [ ]
   ###
   # PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
   # This is applied to MinIO pods only.
@@ -515,14 +511,15 @@ ingress:
     pathType: Prefix
 # Use an extraResources template section to include additional Kubernetes resources
 # with the Helm deployment.
-#extraResources:
-#  - |
-#    apiVersion: v1
-#    kind: Secret
-#    type: Opaque
-#    metadata:
-#      name: {{ dig "tenant" "configSecret" "name" "" (.Values | merge (dict)) }}
-#    stringData:
-#      config.env: |-
-#        export MINIO_ROOT_USER='minio'
-#        export MINIO_ROOT_PASSWORD='minio123'
+extraResources:
+ - |
+   apiVersion: v1
+   kind: Secret
+   type: Opaque
+   metadata:
+     name: {{ dig "tenant" "configSecret" "name" "" (.Values | merge (dict)) }}
+   stringData:
+     config.env: |-
+       export MINIO_ROOT_USER='minio'
+       export MINIO_ROOT_PASSWORD='minio123'
+       export MINIO_BROWSER_REDIRECT_URL='http://ggomg.duckdns.org/minio/'
