--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -522,4 +522,4 @@ extraResources:
      config.env: |-
        export MINIO_ROOT_USER='minio'
        export MINIO_ROOT_PASSWORD='minio123'
-       export MINIO_BROWSER_REDIRECT_URL='http://ggomg.duckdns.org/minio/'
+       export MINIO_BROWSER_REDIRECT_URL='http://ggomg.duckdns.org:30000/minio/'
