fix: minio-ui-route.yaml

--- a/minio/minio-ui-route.yaml
+++ b/minio/minio-ui-route.yaml
@@ -21,4 +21,5 @@ spec:
               replacePrefixMatch: /
       backendRefs:
         - name: myminio-console
+          namespace: minio-tenant
           port: 9090
