--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -5,6 +5,9 @@ tenant:
   #
   # Change this to match your preferred MinIO Tenant name.
   name: myminio
+  
+  exposeServices:
+    console: true
   ###
   # Specify the Operator container image to use for the deployment.
   # ``image.tag`` 
@@ -332,8 +335,7 @@ tenant:
   # - Specify ``console: true`` to expose the Console.
   #
   # Both fields default to ``false``.
-  exposeServices:
-    console: true
+  exposeServices: { }
   ###
   # The `Kubernetes Service Account <https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/>`__ associated with the Tenant.
   serviceAccountName: ""
