minio: exposeServices.type: ClusterIP

--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -5,9 +5,10 @@ tenant:
   #
   # Change this to match your preferred MinIO Tenant name.
   name: myminio
-  
+
   exposeServices:
     console: true
+    type: ClusterIP
   ###
   # Specify the Operator container image to use for the deployment.
   # ``image.tag`` 
