refactor: minio-console expose loadbalancer

--- a/minio/values.yaml
+++ b/minio/values.yaml
@@ -332,7 +332,8 @@ tenant:
   # - Specify ``console: true`` to expose the Console.
   #
   # Both fields default to ``false``.
-  exposeServices: { }
+  exposeServices: 
+    console: true
   ###
   # The `Kubernetes Service Account <https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/>`__ associated with the Tenant.
   serviceAccountName: ""
@@ -359,9 +360,6 @@ tenant:
   serviceMetadata: { }
   ###
   # Add environment variables to be set in MinIO container (https://github.com/minio/minio/tree/master/docs/config)
-  env:
-    - name: MINIO_BROWSER_REDIRECT_URL
-      value: "http://ggomg.duckdns.org:30000/minio"
   ###
   # PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
   # This is applied to MinIO pods only.
